@@ -135,6 +135,7 @@ PATHSEP = @PATHSEP@
 PERL = @PERL@
 PLATFORM_WINDOWS = @PLATFORM_WINDOWS@
 PYTHON = @PYTHON@
+TARGET_PYTHON = @PYTHON@
 RANLIB = @RANLIB@
 ROOTSEP = @ROOTSEP@
 SHELL = @SHELL@
